# readOH2csg

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  config.sh  get_adj_info.cc  pyproject.toml  pytest.ini  readOH.cc  rhel9config.sh  simNumberingCheck.ipynb
.github/actions/install-repo/: action.yml
.github/workflows/: ci.yml  format-check.yml
OmegaH2CSG/: OmegaHMesh.py  __init__.py  config.py  openmcGeometry.py
cmake/: omegah2csgConfig.cmake.in
doc/: top_bottom_flag.md
pythonAPI/omegah2csg/: __init__.py  config.py  openmcGeometry.py
pythonAPI/omegah2csg/convert2degas2/: __init__.py  convert2degas2.py
pythonAPI/omegah2csg/convert2openmc/: __main__.py  convert2openmc.py  convert2openmc_cli.py
src/: Timer.cpp  Timer.h  capi.cpp  capi.h  compute_surface.cpp  compute_surface.h  get_adj_info.cc  readOH.cc
tests/: test_degas2_mesh_functions.py  test_mesh.py  test_openmc_geometry_creation.py  test_openmc_geometry_functions.py
tests/assets/16elem.osh/: 0.osh
tests/assets/6elem.osh/: 0.osh
tests/assets/field_following_ltx.osh/: 0.osh
tests/assets/unstructured_wbbox_ltx.osh/: 0.osh
