[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OmegaH2CSG"
authors = [
    { name="Fuad Hasan", email="fuadhhasan.for@gmail.com" },
]
description = "Convert Omega_h mesh files generated using TOMMS for TOKAMAKs to CSG format for OpenMC and Degas2."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "openmc >= 0.15.0",
]
[project.optional-dependencies]
test = [
    "pytest",
]
vtk = ["vtk"]

[project.urls]
Homepage = "https://github.com/Fuad-HH/readOH2csg"
Issues = "https://github.com/Fuad-HH/readOH2csg/issues"

[tool.setuptools.packages.find]
include = ['OmegaH2CSG*']
exclude = ['tests*']

[tool.setuptools.package-data]
"osh2csg.data" = ["*.txt", "*.dat"]
"osh2csg.lib" = ["*.so"]

[tool.setuptools_scm]
